2_idioms/2_1_type_safety/tests/allow_without_publish.rs
use step_2_1::Post;

fn main()
{
  let post = Post::new( "Test".into(), "Text".into() );
  post.allow();
}